/* Encoding: UTF-8 (No BOM)  Notation (in 5th position):
     * Change, ! Fix, % Optimization, + Addition, - Removal, ; Comment
   Entries may not always be in chronological/commit order.
   See license at the end of file. */

2025-11-10 07:49 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * .github/workflows/windows-arm64.yml
  * .github/workflows/windows.yml
  * build/openssl/Makefile
    * separate step for deps needing GNU tools, not to spoil
      pure zig cc build environment for others

2025-11-10 23:02 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * .github/workflows/ubuntu-arm64.yml
  * .github/workflows/ubuntu.yml
  * .github/workflows/windows-arm64.yml
  * .github/workflows/windows.yml
  * build/libpq-inherit/Makefile
    * build fixes

2025-11-10 22:31 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * .github/workflows/macos.yml
  * .github/workflows/ubuntu-arm64.yml
  * .github/workflows/ubuntu.yml
  * .github/workflows/windows-arm64.yml
  * .github/workflows/windows.yml
  * build/Makefile
    * new default packages lists

2025-11-10 21:52 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * .github/workflows/windows.yml
    - there is no CLANG64 shell(?)

  * .github/workflows/macos.yml
    * try to reuse Homebrew libpq via libpq-inherit

2025-11-10 21:39 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  * .github/workflows/windows.yml
    * switch MSYS2 shell to CLANG64

2025-11-10 21:21 UTC+0100 Aleksander Czajczynski (hb fki.pl)
  + base/libpq-inherit/Makefile
    + added pseudo-package to inherit and repackage libpq
      PostgreSQL client library from host package system,
      potential targets are MSYS2 with MSYSTEM=CLANG64(?)
      and macOS Homebrew.

  * .github/workflows/windows.yml
    ! fix missing git tools in MSYS2 shell

2025-11-10 18:39 UTC+0100 Aleksander Czajczynski (hb fki.pl)
 * build/cmake-binary/Makefile
 * build/libduckdb-binary/Makefile
 * build/ninja-binary/Makefile
 * build/zig-binary/Makefile
 * common.mk