@@ -35,7 +35,7 @@ ifneq ($(findstring Msys,$(_DETPLAT_STR)),)
       #  export HBPK_CC_PATHFAMILY = CC=$(PKGDEST)/bin/clang
       endif
       # festival of ugly cmake hacks, when cmake_link_script is used, this seems the only way...
-      HBPK_CMAKE_G = -DCMAKE_AR=$(PKGDEST)/bin/ar.bat
+      HBPK_CMAKE_G = -DCMAKE_AR=ar.bat # $(PKGDEST)/bin/ar.bat
    endif
    export HBPK_CMAKE_G := -G "MSYS Makefiles" $(HBPK_CMAKE_G)
 else
